WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
14202
Table caption renders too narrow sometimes
https://bugs.webkit.org/show_bug.cgi?id=14202
Summary
Table caption renders too narrow sometimes
David Kilzer (:ddkilzer)
Reported
2007-06-17 13:42:14 PDT
* SUMMARY Loading the URL on this bug sometimes results in a caption that is too tall. * STEPS TO REPRODUCE 1. Launch Safari/WebKit. 2. Open attached test case. 3. If caption under image is not a skinny column, reload the page until it is rendered that way. * EXPECTED RESULTS The caption under the image should fill the width of the image and only occupy 4-5 lines of text. * ACTUAL RESULTS The caption under the image is about 1 inch wide and occupies numerous lines of text. * REGRESSION Unknown since I can't test with archived Safari 2.0.4 (419.3) with the 3.0 beta installed. * NOTES See attached screenshot as well.
Attachments
Screenshot
(411.29 KB, image/png)
2007-06-17 13:43 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Test case (web page, complete)
(246.31 KB, application/zip)
2007-06-17 13:44 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Reduction
(405 bytes, text/html)
2007-06-18 16:10 PDT
,
mitz
no flags
Details
Mark the caption for relayout when the table width changes
(287.46 KB, patch)
2007-06-19 01:41 PDT
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2007-06-17 13:43:00 PDT
Created
attachment 15091
[details]
Screenshot
David Kilzer (:ddkilzer)
Comment 2
2007-06-17 13:44:49 PDT
Created
attachment 15092
[details]
Test case (web page, complete) Test case for the bug. This page was saved from Firefox 2.0.0.4 as "Web page, complete". Unzip the file and open table-caption-issue-ff.html.
David Kilzer (:ddkilzer)
Comment 3
2007-06-17 13:55:11 PDT
Note that there is also a JavaScript error on the page, but I don't think this impacts the layout: SyntaxError: Invalid regular expression: internal error: code overflow
http://foxtv.us.intellitxt.com/v3/func_033.js?v=200706050032_patch1
Line: 2
mitz
Comment 4
2007-06-18 16:10:09 PDT
Created
attachment 15110
[details]
Reduction
mitz
Comment 5
2007-06-19 01:41:48 PDT
Created
attachment 15115
[details]
Mark the caption for relayout when the table width changes This improves the results on several Mozilla tests, but caption width still seems to be off by a few pixels when the table has a border. That's a separate bug, however.
Darin Adler
Comment 6
2007-06-21 23:44:11 PDT
Comment on
attachment 15115
[details]
Mark the caption for relayout when the table width changes r=me
Mark Rowe (bdash)
Comment 7
2007-06-25 03:32:37 PDT
Landed in
r23762
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug